	Fixed bug where IE could produce unknown runtime error if you replaced a image with another image from a separate frame.
	Fixed bug where the domLoaded state for the Event class wasn't set correctly if the editor was loaded dynamically using the gzip compressor.
	Fixed bug where handling of the base element for a page would produce incorrect urls. Based on a patch contributed by John LeSueur.
Version 3.0.8 (2008-04-30)
	Fixed bug where IE would produce an error if textareas without names where converted.
	Fixed bug where editor wasn't forced empty when there was only a single br or empty paragraph left.
	Fixed bug where IE would produce an warning message if object elements where produced in the media plugins preview running on https.
	Fixed bug where new addVer function didn't handle hash items correctly. Patch contributed by Mirek Burkon.
	Fixed bug where font_size_style_values option wasn't applied correctly to fonts inside the editor.
	Fixed bug where image selection could be lost if a image was edited using context menu on IE.
	Fixed bug where style values wasn't updated properly due to an invalid regexp.
	Fixed bug where IE 6 where displaying warning message about insecure items when inserting an image while using https. Patch contributed by Norifumi Sunaoka.
	Fixed bug where IE was producing an auto save message if you selected a color from the color split button.
	Fixed bug where backspace sometimes would move the caret to the end of the previous block in Gecko.
	Fixed bug where the rowlayout manager didn't work as described in the documentation.
	Fixed bug where the default options for the fullpage plugin wasn't applied correctly.
	Fixed bug where selection would jump one character if you applied a styles to a words in non IE browsers.
	Fixed bug where undo levels wasn't added correctly if you went back in undo history and added a new event.
	Fixed bug where font size dropdown didn't mark the selected size in IE.